# gba-dev-rs

./: .editorconfig  .gdbinit  .gitattributes  .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  armv4t-none-eabi.json  build.rs  entry.S  rust-toolchain  rust-toolchain.toml  rustfmt.toml  thumbv4-none-eabi.json
.cargo/: config  config.toml
.github/workflows/: ci.yml
crates/gba/: Cargo.toml  build.rs
crates/gba-proc-macros/: Cargo.toml
crates/gba-proc-macros/src/: lib.rs
crates/gba/examples/mode3/: .gitignore  README.md  cyberpunk.png.license  grit.sh  main.rs
crates/gba/src/: bios.rs  color.rs  entry.S  input.rs  interrupt.rs  lib.rs  register.rs
crates/mgba/: Cargo.toml
crates/mgba/src/: lib.rs  macros.rs
docs/: SUMMARY.md  book.toml  index.md  license.md  resources.md
scripts/: deps.sh  install-deps.sh  install-rust.sh  roms.sh
scripts/hooks/: pre-commit.sh
src/: bios.rs  color.rs  entry.S  input.rs  interrupt.S  interrupt.rs  lib.rs  linker.ld  main.rs  mgba.rs  mode4.rs  register.rs
src/arch/: entry.S  linker.ld
src/mgba/: macros.rs  mod.rs
