[package]
name = "untitled"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = ["Tim Crawford <crawfxrd@gmail.com>"]
description = "Developing for the Nintendo Game Boy Advance with Rust"
keywords = ["gameboy", "gba"]
categories = ["embedded", "games"]
publish = false

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
cc = "1.0"

[dependencies]
