[package]
name = "untitled"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = ["Tim Crawford <crawfxrd@gmail.com>"]
description = "Developing for the Nintendo Game Boy Advance with Rust"
keywords = ["gameboy", "gba"]
categories = ["embedded", "games"]
publish = false

[workspace]
members = [
    "crates/gba",
    "crates/mgba",
]

[profile.dev]
codegen-units = 1
opt-level = 1
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
gba = { path = "crates/gba"}
mgba = { path = "crates/mgba" }
