[package]
name = "untitled"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Tim Crawford <crawfxrd@gmail.com>"]
description = "Developing for the Nintendo Game Boy Advance with Rust"
keywords = ["gameboy", "gba"]
categories = ["embedded", "games"]
publish = false

[workspace]
members = [
    "crates/*",
]

[profile.dev]
codegen-units = 1
opt-level = 1
#panic = "abort"        # XXX: https://github.com/rust-lang/cargo/issues/7359

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
#panic = "abort"        # XXX: https://github.com/rust-lang/cargo/issues/7359

[dependencies]
gba = { path = "crates/gba", version = "0" }
mgba = { path = "crates/mgba", version = "0" }
