[package]
name = "gba-proc-macros"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
description = "Procedural macros for GBA"
repository = "https://github.com/crawfxrd/gba-dev-rs"
keywords = ["gameboy"]
categories = ["embedded", "game-development", "no-std"]
publish = false

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
