[package]
name = "gba"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
description = "Library for GBA development"
repository = "https://github.com/crawfxrd/gba-dev-rs"
keywords = ["gameboy"]
categories = ["embedded", "game-development", "no-std"]
publish = false

[build-dependencies]
cc = "1.0"

[dependencies]
gba-proc-macros = { path = "../gba-proc-macros", version = "0" }
