[package]
name = "mgba"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Tim Crawford <crawfxrd@gmail.com>"]
description = "Logging interface for mGBA"
repository = "https://github.com/crawfxrd/gba-dev-rs"
keywords = ["gba", "logging"]
categories = ["embedded", "game-development", "no-std"]
publish = false

[dependencies]
